fix: reduce the number of spacing utility classes

--- a/site/assets/src/scss/spacing.scss
+++ b/site/assets/src/scss/spacing.scss
@@ -13,8 +13,18 @@
     --s5: calc(var(--s4) * var(--ratio));
 }
 
-@for $i from -5 through 5 {
+$gap-sizes: (3, 4);
+
+@each $i in $gap-sizes {
     .gap-#{$i} {
         gap: var(--s#{$i});
+    }
+}
+
+$flow-sizes: (2);
+
+@each $i in $flow-sizes {
+    .flow-#{$i} {
+        --flow-size: var(--s#{$i});
     }
 }
